<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tips"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="180dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Bill_Amount"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"

                  android:id="@+id/Bill_Amount"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"

                  android:id="@+id/Bill_Amount_Input"

        />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >
        <TextView android:layout_width="180dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Tip"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"

                  android:id="@+id/Tip_Amount"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"

                  android:id="@+id/Tip_Amount_Input"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >
        <CheckBox android:layout_width="181dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Split"
                  android:textStyle="bold"
                  android:textSize="26sp"
                  android:id="@+id/Split_Bill"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:id="@+id/Persons"
                  android:hint="@string/Hint"
        />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >
        <TextView android:layout_width="181dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Total_Price"
                  android:textStyle="bold"
                  android:textSize="26sp"
                  android:padding="10dp"
                  android:id="@+id/Price"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:editable="false"
                  android:id="@+id/Price_Display"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >
        <TextView android:layout_width="181dp"
                  android:layout_height="wrap_content"
                  android:text="@string/PerPerson"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"
                  android:id="@+id/PricePerPerson"


        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:editable="false"
                  android:id="@+id/PerPerson"
        />

    </LinearLayout>
    <Button android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="@string/Compute"
            android:textStyle="bold"
            android:textSize="26sp"
            android:id="@+id/compute"
    />


</LinearLayout>

