<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Calculator"
        android:orientation="vertical"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="180dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Cost"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:id="@+id/Cost_Amount_Input"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="180dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Tax"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:id="@+id/Tax_Amount_Input"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:editable="false"
                  android:backgroundTint="@android:color/background_dark"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="180dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Tax_total"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="none"
                  android:id="@+id/Tax_Total"
         />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="180dp"
                  android:layout_height="wrap_content"
                  android:text="@string/Cost_total"
                  android:textSize="26sp"
                  android:textStyle="bold"
                  android:padding="10dp"
        />
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="none"
                  android:id="@+id/Price_Total"
         />
    </LinearLayout>






</LinearLayout>